# evolution-sim

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
console/: Cargo.toml
console/src/: env_console.rs  main.rs
core_lib/: Cargo.toml
core_lib/data/: default_env1.json  default_env2.json  default_env3.json  default_env4.json  default_env5.json  default_env6.json  default_env7.json  default_env8.json
core_lib/src/: creature.rs  environment.rs  lib.rs  linalg.rs  neural_net.rs
gui/: Cargo.toml
gui/src/: env_macroquad.rs  main.rs
led/: Cargo.toml  build.rs
led/src/: hub75_led_driver.rs  librgbmatrix_defines.rs  main.rs
src/: creature.rs  env_console.rs  env_macroquad.rs  environment.rs  hub75_led_driver.rs  librgbmatrix_defines.rs  linalg.rs  main.rs  main_console.rs  main_led.rs  main_macroquad.rs  matrix_math.rs  neural_net.rs
