[package]
name = "evolution_sim"
version = "0.1.0"
edition = "2021"
default-run = "gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.*"
num = "0.4.*"
macroquad = { version = "0.4.*", optional = true }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.138"

[features]
include_macroquad = ["macroquad"]   # Uses the macroquad library to visualize the environment
default = ["include_macroquad"]

[[bin]]
name = "gui"
path = "src/main_macroquad.rs"
required-features = ["include_macroquad"]

[[bin]]
name = "console"
path = "src/main_console.rs"

