# Main config for the evolution simulation package

# Define members of the project workspace
[workspace]
members = [ "console",    
    "core_lib",
    "console",
    "gui",
    "led",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Scott Stack"]
edition = "2021"
description = "A program that simulates evolution of little pixel creatures!"
repository = "https://github.com/spstack/evolution-sim"